<resources>

    <string name="app_name">Falcon Finder</string>
    <string name="view_name">Category</string>
    <string name="action_settings">Settings</string>

    //finalcheck
    <string name="yes">Yes</string>
    <string name="no">No</string>

    //settings strings
    <string name="emailNotifs"> Email Notifications</string>
    <string name="phoneNotifs">Phone Notifications</string>
    <string name="reminder">Reminder Time</string>

    //sign_in strings
    <string name="log_in">Log In</string>
    <string name="push_me">PUSH ME FOR EVENTS</string>

    //sign_up strings
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>

    //userlist  strings
    <string name="event_name">Event Name</string>
    <string name="location"> Location </string>
    <string name="userlist_button">|||</string>
    <string name="date">Date</string>
    <string name="time">Time</string>


    //buttons
    <string name="all">All</string>
    <string name="career_services">Career</string>
    <string name="sports">Events</string>
    <string name="other">Other</string>
    <string name="athletics">Athletics</string>
    <string name="log_in_online">Web Log In</string>

    //menu
    <string name="exit">Exit</string>
    <string name="all_events">All Events</string>
    <string name="user_events">User Events</string>
    <string name="categories">Categories</string>

    //colors
    <color name="yellow">#f5e20b</color>
    <color name="dark_yellow">#d79c05</color>
    <color name="white">#FFFFFF</color>
    <color name="gray">#FF999999</color>
    <color name="light_blue">#FFADD8e6</color>
    <color name="blue">#3f46ac</color>
    <color name="dark_blue">#040753</color>
    <color name="black">#000000</color>
    <color name="red">#FFF80000</color>
    <color name="neon_green">#ff00ff00</color>

    //SettimeArray
    <string-array name="timeNums">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>
</resources>
