<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue" >

    <TableRow
        android:background="@color/yellow">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_events"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="75dp" />

        <Button style="@style/userListButton" />

    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/eventname"
            style="@style/userListTextView"
            android:text="@string/event_name"
            android:layout_marginRight="-40dp"
            android:layout_marginLeft="0dp" />

        <TextView
            android:id="@+id/location"
            style="@style/userListTextView"
            android:text="@string/location"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="-30dp" />

        <TextView
            android:id="@+id/Date"
            style="@style/userListTextView"
            android:text="@string/date"
            android:layout_marginLeft="-10dp" />

        <TextView
            android:id="@+id/time"
            style="@style/userListTextView"
            android:text="@string/time"
            android:layout_marginLeft="40dp" />

    </TableRow>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawSelectorOnTop="true" />

</TableLayout>