<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/firstName"
        style="@style/sign_upTextView"
        android:text="@string/first_name"
        android:layout_above="@id/lastName">
    </TextView>

    <EditText
        android:id="@+id/enterFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:text=""
        android:layout_alignBottom="@+id/firstName"
        android:layout_toEndOf="@+id/firstName"
        android:layout_toRightOf="@+id/firstName">
    </EditText>

    <TextView
        android:id="@+id/lastName"
        style="@style/sign_upTextView"
        android:text="@string/last_name"
        android:layout_marginBottom="38dp"
        android:layout_centerVertical="true">
    </TextView>

    <EditText
        android:id="@+id/enterLastName"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterFirstName"
        android:layout_alignBottom="@id/lastName"
        android:layout_toEndOf="@+id/lastName"
        android:layout_toRightOf="@+id/lastName">
    </EditText>

    <TextView
        android:id="@+id/email"
        style="@style/sign_upTextView"
        android:text="@string/email"
        android:layout_below="@+id/enterLastName">
    </TextView>

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:text=""
        android:layout_alignBottom="@+id/email"
        android:layout_below="@+id/enterLastName"
        android:layout_toEndOf="@+id/lastName"
        android:layout_toRightOf="@+id/lastName">
    </EditText>

    <TextView
        android:id="@+id/password"
        style="@style/sign_upTextView"
        android:text="@string/password"
        android:layout_below="@+id/enterEmail">
    </TextView>

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:text=""
        android:layout_alignBottom="@+id/password"
        android:layout_below="@+id/enterEmail"
        android:layout_toEndOf="@+id/firstName"
        android:layout_toRightOf="@+id/firstName">
    </EditText>

    <Button
        android:id="@+id/signup"
        style="@style/buttonStyle"
        android:text="@string/sign_up"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

</RelativeLayout>