<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enterEmail"
        android:layout_alignEnd="@+id/enterEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/enterEmail"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/Ablue"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/email"
        style="@style/sign_upTextView"
        android:layout_above="@+id/password"
        android:text="@string/email"
        android:textSize="30sp">
    </TextView>

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email"
        android:layout_alignTop="@+id/email"
        android:layout_toEndOf="@+id/password"
        android:layout_toRightOf="@+id/email"
        android:text=""
        android:textColor="@color/black">
    </EditText>

    <TextView
        android:id="@+id/password"
        style="@style/sign_upTextView"
        android:layout_above="@+id/signin"
        android:layout_marginBottom="38dp"
        android:text="@string/password"
        android:textSize="30sp">
    </TextView>

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/password"
        android:layout_below="@+id/email"
        android:layout_toEndOf="@+id/password"
        android:layout_toRightOf="@+id/password"
        android:textColor="@color/black">
    </EditText>

    <Button
        android:id="@+id/signin"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_above="@+id/signup"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="150dp"
        android:background="@color/AOrange"
        android:text="@string/log_in" />
    <Button
        android:id="@+id/signup"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_above="@+id/log_in_web"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/AOrange"
        android:text="sign up" />

    <Button
        android:id="@+id/log_in_web"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_above="@+id/dialerbutt"
        android:layout_alignEnd="@+id/enterPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignRight="@+id/enterPassword"
        android:background="@color/AOrange"
        android:gravity="center"
        android:text="@string/log_in_online" />

    <Button
        android:id="@+id/dialerbutt"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_alignEnd="@+id/enterPassword"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignRight="@+id/enterPassword"
        android:background="@color/AOrange"
        android:color="#de0909"
        android:text="Call Admin" />


</RelativeLayout>